Set up basic express server

--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3"
   }
 }
