--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-ensure-login": "^0.1.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
     "mongoose": "^5.0.14",
     "oauth2orize": "^1.11.0",
